--- a/vignettes/carbon_tracking.Rmd
+++ b/vignettes/carbon_tracking.Rmd
@@ -24,7 +24,6 @@ First, let's load the packages we will need.
 
 ``` {r hector.init}
 library(hector)
-library(dplyr)
 library(ggplot2)
 ```
 
@@ -34,7 +33,7 @@ Under the [core] section, there is a value labeled `trackingDate=9999`. This def
 
 ## Carbon tracking
 
-Now, we will read in the .ini file and run a core. To access the carbon tracking, simply use the command `get_tracking_data`. This creates a tracking file which gives the current state of the pool and fractions of where the carbon is sourced from relative to the start date. 
+Now, we will read in the .ini file and run a core. To access the carbon tracking, simply use the command `get_tracking_data()`. This creates a tracking file which gives the current state of the pool and fractions of where the carbon is sourced from relative to the start date. 
 
 ``` {r hector.tracking}
 inifile <- file.path(system.file('input', package='hector'), 'hector_rcp45.ini')
@@ -45,7 +44,7 @@ run(core)
 tdata <- get_tracking_data(core)
 head(tdata)
 
-tdata <- tdata %>% filter(pool_name != "Diff")
+tdata <- subset(tdata, pool_name != "Diff")
 ```
 
 The `tdata` dataset contains information on year, pool name, amount of units in each pool, and the fraction of each source within that pool. The last line removes the `Diff` pool, which tracks how much certain pools have changed. This is useful, but not for our example.
@@ -71,12 +70,15 @@ Let's take a look at these graphs. Note that the `earth_c` pool is always 100% `
 Now, if we want to examine just one pool, we can do the following. 
 
 ``` {r hector.atm}
-atmos <- tdata %>% filter(pool_name == "atmos_c")
+atmos <- subset(tdata, pool_name == "atmos_c")
 
-atm <- atmos %>% 
-    ggplot(aes(year, source_fraction, fill = source_name)) +
+atm <- ggplot(atmos,
+    aes(year, source_fraction, fill = source_name)) +
     geom_area() +
-    facet_wrap(~pool_name)
+    facet_wrap(~pool_name) +
+    ggtitle("Source Percentage Change Over Time - Atmosphere") +
+    xlab("Year") +
+    ylab("Source Fraction")
 atm
 ```
 
