--- a/vignettes/manual/Constraints.Rmd
+++ b/vignettes/manual/Constraints.Rmd
@@ -44,7 +44,7 @@ If the current [input file](InputFiles) includes, in its `[simpleNbox]` section,
 CO2_constrain=csv:path/to/constraint/file.csv
 ```
 
-then the model's atmospheric CO$_2$ concentration ([CO2], given in ppmv CO2) will follow the contents of this file (which should have two columns, `Date` and `CO2_constrain`).
+then the model's atmospheric CO$_2$ concentration ([CO2], given in ppmv CO$_2$) will follow the contents of this file (which should have two columns, `Date` and `CO2_constrain`).
 Alternatively, Hector's atmospheric CO$_2$ concentration constraint can be set using the `setvars` function and `CO2_CONSTRAIN` variable.
 
 The CO$_2$ constraint is applied at the _end_ of the current time step.
