Consistent C++ and R units for tracking date

--- a/vignettes/carbon_tracking.Rmd
+++ b/vignettes/carbon_tracking.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Example: Carbon tracking with Hector"
 author: "Leeya Pressburger"
-date: "8/3/2021"
+date: "2021-08-03"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEncoding{UTF-8}
@@ -17,9 +17,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Introduction
 
-This vignette will walk through Hector's carbon tracking feature and show how to turn on tracking, retrieve the tracking data, and display the results.
+This vignette will walk through Hector's carbon tracking feature and show how to
+turn on tracking, retrieve the tracking data, and display the results.
 
-Hector's carbon tracking feature helps to trace the movement of carbon between various pools as the model runs. At the user-chosen start date, each pool is
+Hector's carbon tracking feature helps to trace the movement of carbon between 
+various pools as the model runs. At the user-chosen start date, each pool is
 deemed to be composed of 100% carbon from itself, i.e. at that moment in time 
 the deep ocean pool is 100% composed of carbon from the deep pool. 
 
@@ -38,31 +40,36 @@ library(ggplot2)
 
 ## Carbon tracking
 
-Now, we will read in an .ini file and create a new core. In this example, we will use RCP 4.5.
+Now, we will read in an .ini file and create a new core. In this example, we 
+will use RCP 4.5.
 
-In order to use the carbon tracking feature, we must use `setvar` and `fetchvars`. First, let's look at the `trackingDate` prior to setting it to any value. 
+In order to use the carbon tracking feature, we must use `setvar` and `fetchvars`. 
+First, let's look at the `trackingDate` prior to setting it to any value. 
 
 ``` {r setup.core}
 inifile <- file.path(system.file('input', package = 'hector'),
                      'hector_rcp45.ini')
 core <- newcore(inifile)
 
-fetchvars(core, NA, TRACKING_DATE(), "")
+fetchvars(core, NA, TRACKING_DATE())
 ```
 
-This returns the variable `trackingDate` with a `value` of 9999. This default value does not turn carbon tracking on (because the model never reaches year 9999).
+This returns the variable `trackingDate` with a `value` of 9999. This default 
+value does not turn carbon tracking on (because the model never reaches year 9999).
 
-Now, we will set a `trackingDate`, check that it worked, and run a core. Let's begin tracking in 1750.
+Now, we will set a `trackingDate`, check that it worked, and run a core. 
+Let's begin tracking in 1750.
 
 ``` {r set.date}
-setvar(core, NA, TRACKING_DATE(), 1750, "")
-fetchvars(core, NA, TRACKING_DATE(), "")
+setvar(core, NA, TRACKING_DATE(), 1750, "(unitless)")
+fetchvars(core, NA, TRACKING_DATE())
 
 run(core)
 ```
 
 At this point, the model has been run. To retrieve the carbon tracking data, we
-use the command `get_tracking_data()`. This returns a data frame which gives the current state of the pool, and fractions of where the carbon is sourced from, at
+use the command `get_tracking_data()`. This returns a data frame which gives the 
+current state of the pool, and fractions of where the carbon is sourced from, at
 each model time point after `trackingDate`.
 
 ``` {r hector.tracking}
@@ -81,7 +88,7 @@ carbon in each pool, and the fraction of each source for that pool.
 By using ggplot, we can create time series graphs of how the origin of one
 or more carbon pools in the model changes over time. 
 
-``` {r hector.plot1}
+``` {r hector.plot1, fig.width=6}
 ggplot(tdata, aes(year, source_fraction, fill = source_name)) +
   geom_area() +
   facet_wrap(~pool_name) +
@@ -91,14 +98,16 @@ ggplot(tdata, aes(year, source_fraction, fill = source_name)) +
   ylab("Source Fraction")
 ```
 
-Let's take a look at these graphs. Note that the `earth_c` pool is always 100% `earth_c`: there are no inflows to this pool in RCP 4.5 (in contrast, in
+Let's take a look at these graphs. Note that the `earth_c` pool is always 100% 
+`earth_c`: there are no inflows to this pool in RCP 4.5 (in contrast, in
 RCP 2.6 there is direct-air carbon capture and storage, so the `earth_c` pool
-origins will change). We see that around 1800, human emissions (from `earth_c`) begin to appear in pools such as `atmos_c` or `soil_c_global`. 
+origins will change). We see that around 1800, human emissions (from `earth_c`) 
+begin to appear in pools such as `atmos_c` or `soil_c_global`. 
 Between 1900-2000, human emissions take off and become major sources by 2100. 
 
 Let's examine just one pool: 
 
-``` {r hector.atm}
+``` {r hector.atm, fig.width=6}
 atmos <- subset(tdata, pool_name == "atmos_c")
 
 ggplot(atmos,
@@ -114,7 +123,9 @@ This allows us to better examine the contributions by source to the atmosphere.
 
 ## Conclusion
 
-The carbon tracking feature allows users to identify and trace the composition by source of each pool in Hector. This data can be easily visualized using ggplot to then be used for further study. 
+The carbon tracking feature allows users to identify and trace the composition 
+by source of each pool in Hector. This data can be easily visualized using 
+ggplot to then be used for further study. 
 
 Remember to shut down the core.
 
