--- a/vignettes/carbon_tracking.Rmd
+++ b/vignettes/carbon_tracking.Rmd
@@ -58,7 +58,9 @@ This returns the variable `trackingDate` with a `value` of 9999. This default
 value does not turn carbon tracking on (because the model never reaches year 9999).
 
 Now, we will set a `trackingDate`, check that it worked, and run a core. 
-Let's begin tracking in 1750.
+Let's begin tracking in 1750. On that date, the model will mark all carbon in
+each of its pools as originating in that pool: the atmosphere will be 100%
+'atmosphere-origin' C, the soil 100% 'soil-origin' C, etc.
 
 ``` {r set.date}
 setvar(core, NA, TRACKING_DATE(), 1750, "(unitless)")
@@ -77,8 +79,14 @@ tdata <- get_tracking_data(core)
 head(tdata)
 ```
 
-The `tdata` dataset now contains information on year, pool name, amount of 
-carbon in each pool, and the fraction of each source for that pool.
+The `tdata` dataset now contains information on year, the model component,
+the name of the pool within that component, the amount of 
+carbon in the pool, and the fraction (0-1) of each source for that pool. 
+The source fractions for a given pool and year will always sum to 1.
+
+Side note: the names in the carbon tracking data (`pool_name`, `pool_value`,
+and `pool_units`) differ from those used in the model's standard stream output
+(which are `variable`, `value`, and `units` respectively).
 
 ## Results
 
@@ -121,8 +129,8 @@ This allows us to better examine the contributions by source to the atmosphere.
 ## Conclusion
 
 The carbon tracking feature allows users to identify and trace the composition 
-by source of each pool in Hector. This data can be easily visualized using 
-ggplot to then be used for further study. 
+by source of each pool in Hector. This is useful to, for example, calculate
+the model's [airborne fraction](http://dx.doi.org/10.1029/2009GL040613).
 
 Remember to shut down the core.
 
