--- a/vignettes/GMAT-GMST.Rmd
+++ b/vignettes/GMAT-GMST.Rmd
@@ -17,9 +17,14 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Introduction
 
-The global mean surface temperature (GMST) is the average of the air temperature over land and the temperature at the surface of the ocean.^[Allen, M.R., O.P. Dube, W. Solecki, F. Aragón-Durand, W. Cramer, S. Humphreys, M. Kainuma, J. Kala, N. Mahowald, Y. Mulugetta, R. Perez, M. Wairiu, and K. Zickfeld, 2018: Framing and Context. In: Global Warming of 1.5°C. An IPCC Special Report on the impacts of global warming of 1.5°C above pre-industrial levels and related global greenhouse gas emission pathways, in the context of strengthening the global response to the threat of climate change, sustainable development, and efforts to eradicate poverty [Masson-Delmotte, V., P. Zhai, H.-O. Pörtner, D. Roberts, J. Skea, P.R. Shukla, A. Pirani, W. Moufouma-Okia, C. Péan, R. Pidcock, S. Connors, J.B.R. Matthews, Y. Chen, X. Zhou, M.I. Gomis, E. Lonnoy, T. Maycock, M. Tignor, and T. Waterfield (eds.)]. In Press.] This is a very useful metric for observing global temperature changes. However, Hector does not produce GMST as an output at this time. Hector does measure the global mean air temperature (GMAT), which we can use to back-calculate GMST. GMAT is the air temperature measured 2 meters above the ground and is what is presented in a daily weather report.^[Taylor, Jessica. "Analyzing Surface Air Temperatures by Latitude." NASA, 2018. https://mynasadata.larc.nasa.gov/mini-lesson/analyzing-surface-air-temperatures-latitude-student-activity] 
+The global mean surface temperature (GMST) is the average of the air temperature 2 meters over the Earth's surface and the temperature at the surface of the ocean.^[Allen, M.R., O.P. Dube, W. Solecki, F. Aragón-Durand, W. Cramer, S. Humphreys, M. Kainuma, J. Kala, N. Mahowald, Y. Mulugetta, R. Perez, M. Wairiu, and K. Zickfeld, 2018: Framing and Context. In: Global Warming of 1.5°C. An IPCC Special Report on the impacts of global warming of 1.5°C above pre-industrial levels and related global greenhouse gas emission pathways, in the context of strengthening the global response to the threat of climate change, sustainable development, and efforts to eradicate poverty [Masson-Delmotte, V., P. Zhai, H.-O. Pörtner, D. Roberts, J. Skea, P.R. Shukla, A. Pirani, W. Moufouma-Okia, C. Péan, R. Pidcock, S. Connors, J.B.R. Matthews, Y. Chen, X. Zhou, M.I. Gomis, E. Lonnoy, T. Maycock, M. Tignor, and T. Waterfield (eds.)]. In Press.] This is a very useful metric for observing global temperature changes. Although changes in GMST are relatively small in terms of numbers, it takes a great deal of heat to warm the entire planet by even a fraction of a degree. Measurements of the temperature changes provide evidence for anthropogenic climate change.
+
+However, Hector does not produce GMST as an output at this time. Hector does measure the global mean air temperature (GMAT), which we can use to back-calculate GMST. GMAT is the air temperature measured 2 meters above the ground and is what is presented in a daily weather report.^[Taylor, Jessica. "Analyzing Surface Air Temperatures by Latitude." NASA, 2018. https://mynasadata.larc.nasa.gov/mini-lesson/analyzing-surface-air-temperatures-latitude-student-activity] 
 
 This vignette demonstrates how to set up the calculation between GMAT and GMST and how to plot results to observe differences over time. 
+
+(Note that Hector assumes that land air temperature and land surface temperature are equivalent.^[Kriegler, Elmar. "Imprecise Probability Analysis
+for Integrated Assessment of Climate Change." PhD thesis, University of Potsdam, 2005. https://www.pik-potsdam.de/members/edenh/theses/PhDKriegler.pdf])
 
 ## Setup
 
@@ -29,10 +34,9 @@ Let's load the packages we will need and run a scenario.
 library(hector)
 library(ggplot2)
 
-inifile <- file.path(system.file('input', package = 'hector'),
-                     'hector_rcp45.ini')
+inifile <- file.path(system.file('input', package = 'hector'), 'hector_rcp45.ini')
 core <- newcore(inifile)
-run(core)
+invisible(run(core))
 ```
 
 
@@ -42,7 +46,7 @@ GMST can be calculated from Hector outputs by computing a weighted sum of the la
 
 $ GMST = (land air temperature * fractional land area) + (ocean surface temperature * (1 - fractional land area)) $
 
-In Hector, land air temperature is represented by `LAND_AIR_TEMP()` and `Tgav_land` while ocean surface temperature by `OCEAN_SURFACE_TEMP()` and `Tgav_ocean_ST`. These components stem from the variable `Tgav`, which is how Hector stores GMAT (along with `GLOBAL_TEMP()`.)
+In Hector, land air temperature is represented by `Tgav_land` (`LAND_AIR_TEMP()`) and ocean surface temperature is represented by `Tgav_ocean_ST` (`OCEAN_SURFACE_TEMP()`). These components stem from the variable `Tgav` (`GLOBAL_TEMP()`), which is how Hector stores GMAT.
 
 ``` {r find.GMST}
 flnd = 0.29;     # fractional land area, a constant in Hector
@@ -53,25 +57,21 @@ hector_output <- fetchvars(core, 1745:2300, vars = c(LAND_AIR_TEMP(), OCEAN_SURF
 output <- subset(hector_output, variable %in% c(LAND_AIR_TEMP(), OCEAN_SURFACE_TEMP()))
 output <- subset(output, select = c(year, variable, value))
 
-# Reorder data
+# Reorder and clean up data
 output <- reshape(output, direction = "wide", idvar = "year", timevar = "variable")
 names(output) <- gsub("value.", "", names(output))
 
 # Conversion equation
-output$Tgav_land <- output$Tgav_land * flnd
-output$Tgav_ocean_ST <- output$Tgav_ocean_ST * (1 - flnd)
-global_temp <- output$Tgav_land + output$Tgav_ocean_ST
-global_temp <- as.data.frame(global_temp) 
+output$GMST <- with(output, (Tgav_land * flnd + Tgav_ocean_ST * (1-flnd)))
+global_surface_temp <- subset(output, select = c(year, GMST))
 
 # Organize final data, year and corresponding GMST
-global_surface_temp <- cbind(output$year, global_temp)
 names(global_surface_temp)[names(global_surface_temp) == "output$year"] <- "year"
-names(global_surface_temp)[names(global_surface_temp) == "global_temp"] <- "value"
+names(global_surface_temp)[names(global_surface_temp) == "GMST"] <- "value"
 
 variable <- rep("GMST", times = 556)
 variable <- as.data.frame(variable)
 global_surface_temp <- cbind(global_surface_temp, variable)
-
 
 # Rename Hector's variable for GMAT
 global_air_temp <- subset(hector_output, variable == "Tgav")
@@ -80,9 +80,9 @@ global_air_temp$variable <- "GMAT"
 
 ```
 
-## Plot 
+## Plot results
 
-The following plot shows GMST and GMAT over time. We see that recently, GMAT is higher than GMST as GMAT is responding more quickly to anthropogenic forcing than GMST. This makes sense as GMST accounts for heating over the oceans which warm more slowly than the atmosphere. 
+The following plot shows GMST and GMAT over time. We see that in about 2000, GMAT begins to increase more quickly than GMST. By 2300, there is a significant gap between the two; GMAT is higher than GMST as GMAT is responding more quickly to anthropogenic forcing. This makes sense as GMST accounts for heating over the oceans which warm more slowly than the atmosphere. 
 
 ``` {r plot}
 
