--- a/vignettes/manual/AddNewVariable.Rmd
+++ b/vignettes/manual/AddNewVariable.Rmd
@@ -4,16 +4,16 @@ title: Adding a new variable
 
 Adding a new variable to a method using `getData` to obtain the information defined in the INI file.
 
-Method
+Cpp Changes
 ---------
 
-_In hector.ini_  
+In _hector.ini_  
+
 Under the corresponding component add variable
 	Ex: `SN = 42000;`
 
+In _component_data.hpp_   
 
-
-_In hpp file of component_   
 Add variable as `tseries`, `unitval`, `double`, etc. and add its associated time series (when necessary; see above).
 
 Define the variables that are being added  
@@ -21,28 +21,60 @@ Ex: `#define D_ATMOSPHERIC_SO2 "SN"`
 	
 These names do *not* have to match internal component variables but the INI definition *has to* match what appears in quotes
 
-_In the component file.cpp_  
+In _X_component.cpp_ 
+
 Under init, need to register the Capability
 	`core->registerCapability( D_ATMOSPHERIC_SO2, getComponentName() );`
 
-_In cpp file of component_  
 Under `getData` and `setData`, add the new variables in before the Error message 
 
-NOTE: see [tseries](https://jgcri.github.io/hector/articles/manual/TimeSeries.html) documentation for more information on `getData`
+[tseries](https://jgcri.github.io/hector/articles/manual/TimeSeries.html) documentation for more information on `getData`
 
-	(getData)
+**(getData)**
+```
 	else if(varName == D_ATMOSPHERIC_SO2 ) {
 	  returnval = SN;
-	  (setData)
+```
+
+**(setData)**
+```
 	else if( varName ==  D_ATMOSPHERIC_SO2  ) {
 	  H_ASSERT( data.date == Core::undefinedIndex(), "date not allowed");
     SN.set( lexical_cast<double>( value ), U_GG );
         }
+```
 
-
-_If this variable is called in another component._  
+_If the variable is used in other X_component.cpp_  
 
 For example, if adding in a variable within the forcing component  
-Ex: `unitval SN = core->getData( D_ATMOSPHERIC_SO2, runToDate);`
+
+`unitval SN = core->getData( D_ATMOSPHERIC_SO2, runToDate);`
 
 If this variable is a `unitval`, the relevant code file must include `unitval.hpp`.
+
+Expose to R bindings
+---------
+
+In order to be able to use the R hector `setvar` and `fetchvars` functions add a helper function to `rcpp_constants.cpp`
+
+```
+//' @describeIn DocumentationGroupName A description of the variable name. 
+//' @export
+// [[Rcpp::export]]
+String R_FUNCTION_NAME() {
+return D_VARIABLE_NAME;
+}
+```
+
+Here is an example for `GLOBAL_TEMP()` which is used to get global mean temperature data. 
+
+```
+//' @describeIn temperature Global mean temperature anomaly
+//' @export
+// [[Rcpp::export]]
+String GLOBAL_TEMP() {
+return D_GLOBAL_TEMP;
+}
+```
+
+
